# cpp-size

./: .gitmodules  CMakeLists.txt  cpp-size.pro  main.cpp
contrib/cpp_dep/: cpp_dep.cpp  cpp_dep.hpp
forms/: dialog.ui
src/: main.cpp
src/ui/: async_ui_task.hpp  dialog.cpp  dialog.hpp  filtered_tree_view_builder.hpp  include_tree_widget_item.hpp  tree_view_builder.hpp  tree_view_filter.hpp  tree_view_include_size_calculator.hpp
src/util/: filtered_subgraph_builder.hpp
test/: includes-gcc.txt  includes-msvc.txt  includes-simple.txt
ui/: dialog.cpp  dialog.h  include_tree_item.cpp  include_tree_item.hpp  include_tree_model.cpp  include_tree_model.hpp  include_tree_widget_item.hpp
